<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_blue"
    android:orientation="vertical"
    tools:context="br.com.fausto.contactslist.ui.fragments.RegisterFragment"
    android:id="@+id/mainLinearLayout"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textInputSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:startIconDrawable="@drawable/ic_register"
        app:startIconTint="@color/black"
        app:hintTextColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40sp"
        android:layout_marginBottom="10sp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/orange"
            android:hint="@string/name"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="@color/black"
            app:hintTextColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:hint="@string/email"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:startIconDrawable="@drawable/ic_contact_phone"
            app:startIconTint="@color/black"
            app:hintTextColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10sp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputCel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/orange"
                android:hint="@string/phone_number"
                android:singleLine="true"
                android:inputType="phone"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/save_update_button"
                style="@style/button_main_activity"
                android:text="@string/register"
                android:layout_margin="2sp"
                />

            <Button
                android:id="@+id/clear_button"
                style="@style/button_main_activity"
                android:text="@string/clear"
                android:layout_margin="2sp"
                />
        </LinearLayout>
</LinearLayout>