<resources>
    <string name="app_name">Contacts</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="search">search</string>
    <string name="phone_number">phone number</string>
    <string name="clear">Clear</string>
    <string name="register">Confirm</string>
    <string name="close">Close</string>
    <string name="exclude">Exclude</string>
    <string name="edit">Edit</string>
    <string name="call">Call</string>
    <string name="send_email">Send email</string>
    <string name="contacts_list">Contacts List</string>
    <string name="register_contact">Register Contact</string>
    <string name="register_contact_success">Contact registered</string>
    <string name="update">Update</string>
</resources>